--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,8 @@ jobs:
         tools-deps: '1.10.1.469'
     - name: Compile
       run: |
-        clojure -Amin
-        mkdir resources/public/cljs-out
-        cp target/public/cljs-out/prod-main.js resources/public/cljs-out/dev-main.js
+        clojure -Aprod
+        cp target/public/js/main.js resources/public/js/main.js
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.5.1
       env:
