--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,11 @@ jobs:
     - uses: actions/checkout@v1
     - uses: DeLaGuardo/setup-clojure@2.0
       with:
-        tools-deps: '1.10.1.469'
+        tools-deps: '1.11.1'
     - name: Compile
       run: |
-        clojure -Aprod
+        npm install
+        clojure -M:prod
         cp target/public/js/main.js resources/public/js/main.js
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.5.1
