--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "create-react-class": "^15.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "webpack": "^5.73.0",
