--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: DeLaGuardo/setup-clojure@2.0
       with:
-        tools-deps: '1.11.1'
+        cli: 'latest'
     - name: Compile
       run: |
         npm install
